# PropScript

./: CMakeLists.txt  LICENSE.md  README.md
examples/: example.ps  example.psobj
src/: definitions.hpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  propscript.hpp
